# ptl

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: publish.yml  test.yml
cmake/: config.cmake  config.h.in  detect.cmake  install.cmake  ptl-config.cmake.in  ptl.pc.in
doc/: advanced-errors.md  building.md  file.md  function-mapping.md  identity.md  process.md  signal.md  socket.md  spawn.md  system.md  usage.md  users.md
inc/ptl/: core.h  errors.h  file.h  file_descriptor.h  identity.h  process.h  ptl.h  signal.h  socket.h  spawn.h  system.h  users.h  util.h
test/: CMakeLists.txt  common.cpp  common.h  test.cpp  test_errors.cpp  test_file.cpp  test_file_descriptor.cpp  test_identity.cpp  test_signal.cpp  test_socket.cpp  test_spawn.cpp  test_system.cpp  test_users.cpp
tools/: create-release
